Fixed scroll issue on mobile browsers

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,6 +24,11 @@
     padding: $spacing-unit / 4;
 }
 
+.mdl-layout {
+    height: auto;
+    overflow-y: visible;
+}
+
 /**
  * Post level
  */
